--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "autoprefixer": "^10.4.13",
         "dayjs": "^1.11.7",
         "eslint": "^8.29.0",
+        "eslint-config-next": "^13.1.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
