build(config): switch back to rollup
BREAKING CHANGE: tsup did not work; revert to prior bundle setup

--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
     "name": "@sciendis/react-tailwindcss-datepicker",
-    "version": "1.7.3",
+    "version": "1.8.0",
     "description": " Modern date range picker component for React using Tailwind and dayjs.",
-    "main": "dist/index.js",
-    "module": "dist/index.mjs",
+    "main": "dist/index.cjs.js",
+    "module": "dist/index.esm.js",
     "types": "dist/index.d.ts",
     "author": "sciendis",
     "license": "MIT",
     "scripts": {
-        "clean": "rm -rf dist tsconfig.tsbuildinfo",
+        "clean": "rm -rf dist tsconfig.tsbuildinfo .rollup.cache",
         "lint": "eslint --ignore-path .gitignore .",
         "lint:fix": "eslint --ignore-path .gitignore --fix .",
         "pret": "prettier -c .",
         "pret:fix": "prettier --ignore-path .gitignore --config ./.prettierrc --write './**/*.{js,jsx,ts,tsx,css,md,json}'",
         "code-style": "npm run pret && npm run lint",
         "code-style:fix": "npm run pret:fix && npm run pret:fix",
-        "build": "npm run code-style && npm run clean && tsup",
+        "build": "npm run code-style && npm run clean && rollup -c rollup.config.js --bundleConfigAsCjs",
         "pub": "npm run build && npm publish",
         "dev": "next dev -p 8888",
         "test": "jest",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "ci": "pnpm run lint && pnpm run test && pnpm run build"
     },
     "repository": {
         "type": "git",
@@ -42,7 +43,11 @@
         "react": "^17.0.2 || ^18.2.0"
     },
     "devDependencies": {
+        "@changesets/cli": "^2.27.9",
         "@jest/globals": "^29.7.0",
+        "@rollup/plugin-commonjs": "^28.0.1",
+        "@rollup/plugin-node-resolve": "^15.3.0",
+        "@rollup/plugin-typescript": "^12.1.1",
         "@tailwindcss/forms": "^0.5.3",
         "@types/node": "^22.7.5",
         "@types/react": "^18.3.11",
@@ -65,10 +70,10 @@
         "prettier": "^2.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "rollup": "^4.24.0",
         "tailwindcss": "^3.2.4",
         "ts-jest": "^29.2.5",
         "tslib": "^2.7.0",
-        "tsup": "^8.3.0",
         "typescript": "^5.6.2"
     },
     "lint-staged": {
@@ -83,7 +88,7 @@
         "url": "https://github.com/sciendis/react-tailwindcss-datepicker/issues"
     },
     "homepage": "https://github.com/sciendis/react-tailwindcss-datepicker#readme",
-    "dependencies": {
-        "@changesets/cli": "^2.27.8"
-    }
+    "files": [
+        "dist"
+    ]
 }
